clean up graffiti

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,16 @@
 /* write your override styles here */
+#wall .tag-1{
+  display: none;
+}
+div#wall #tag-2{
+  display: none;
+}
+div#wall #tag-3.slick.wicked{
+  display: none;
+}
+.parent div{
+  display: none;
+}
+.parent{
+  display: none;
+}
